[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/icons/success.svg" type="Texture2D" id=1]
[ext_resource path="res://assets/icons/failure.svg" type="Texture2D" id=2]
[ext_resource path="res://resources/fonts/default_bold.tres" type="FontFile" id=3]
[ext_resource path="res://scenes/popups/copy_move/CopyMovePopup.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui_nodes/AccessibilityFocus.gd" type="Script" id=5]

[node name="CopyMovePopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
exclusive = true
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = -10.0

[node name="IntroLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
offset_right = 924.0
offset_bottom = 14.0
text = "Do you want to move or copy your existing setup to RetroHub?"
align = 1

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/IntroLabel"]
script = ExtResource( 5 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
offset_top = 18.0
offset_right = 924.0
offset_bottom = 22.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 26.0
offset_right = 924.0
offset_bottom = 468.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="MoveSection" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_top = 175.0
offset_right = 445.0
offset_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MoveFiles" type="Label" parent="VBoxContainer/HBoxContainer/MoveSection"]
unique_name_in_owner = true
offset_right = 445.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource( 3 )
text = "Move files from %s to RetroHub"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MoveSection"]
offset_top = 24.0
offset_right = 445.0
offset_bottom = 56.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MoveSection/HBoxContainer"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MoveSection/HBoxContainer"]
offset_left = 36.0
offset_top = 9.0
offset_right = 445.0
offset_bottom = 23.0
size_flags_horizontal = 3
text = "Doesn't require significantly more disk space"
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MoveSection"]
offset_top = 60.0
offset_right = 445.0
offset_bottom = 92.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MoveSection/HBoxContainer2"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource( 2 )

[node name="MoveDisadvantage" type="Label" parent="VBoxContainer/HBoxContainer/MoveSection/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 36.0
offset_right = 445.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "Is very likely to break existing %s configuration, requiring you to reconfigure it."
autowrap = true

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/MoveSection"]
script = ExtResource( 5 )

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
offset_left = 460.0
offset_right = 464.0
offset_bottom = 442.0

[node name="CopySection" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.25098 )
offset_left = 479.0
offset_top = 157.0
offset_right = 924.0
offset_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="CopyFiles" type="Label" parent="VBoxContainer/HBoxContainer/CopySection"]
unique_name_in_owner = true
offset_right = 445.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource( 3 )
text = "Copy files from %s to RetroHub"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CopySection"]
offset_top = 24.0
offset_right = 445.0
offset_bottom = 56.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource( 1 )

[node name="CopyAdvantage" type="Label" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer"]
unique_name_in_owner = true
offset_left = 36.0
offset_top = 9.0
offset_right = 445.0
offset_bottom = 23.0
size_flags_horizontal = 3
text = "Leaves %s configuration intact, and can still be used"
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CopySection"]
offset_top = 60.0
offset_right = 445.0
offset_bottom = 92.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer2"]
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer2"]
offset_left = 36.0
offset_top = 9.0
offset_right = 445.0
offset_bottom = 23.0
size_flags_horizontal = 3
text = "May take considerable disk space:"
autowrap = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CopySection"]
offset_top = 96.0
offset_right = 445.0
offset_bottom = 110.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer3"]
offset_right = 102.0
offset_bottom = 14.0
text = "Estimated size: "

[node name="Size" type="Label" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer3"]
unique_name_in_owner = true
offset_left = 106.0
offset_right = 183.0
offset_bottom = 14.0
text = "Calculating.."

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/CopySection"]
offset_top = 114.0
offset_right = 445.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer4"]
offset_right = 121.0
offset_bottom = 14.0
text = "Current space left: "

[node name="SpaceLeft" type="Label" parent="VBoxContainer/HBoxContainer/CopySection/HBoxContainer4"]
unique_name_in_owner = true
offset_left = 125.0
offset_right = 202.0
offset_bottom = 14.0
text = "Calculating.."

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/HBoxContainer/CopySection"]
script = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
offset_left = 387.0
offset_top = 472.0
offset_right = 537.0
offset_bottom = 512.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
offset_top = 13.0
offset_right = 35.0
offset_bottom = 27.0
text = "Move"

[node name="MoveCopyButton" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 39.0
offset_right = 115.0
offset_bottom = 40.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
offset_left = 119.0
offset_top = 13.0
offset_right = 150.0
offset_bottom = 27.0
text = "Copy"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
offset_left = 332.0
offset_top = 516.0
offset_right = 592.0
offset_bottom = 536.0
size_flags_horizontal = 4
theme_override_constants/separation = 150

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
offset_right = 54.0
offset_bottom = 20.0
text = "Cancel"

[node name="Import" type="Button" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
offset_left = 204.0
offset_right = 260.0
offset_bottom = 20.0
text = "Import"

[connection signal="about_to_popup" from="." to="." method="_on_CopyMovePopup_about_to_show"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/MoveCopyButton" to="." method="_on_MoveCopyButton_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Import" to="." method="_on_Import_pressed"]
